recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  
  double x = 3.72;
}
